# electricity_price_forecast

./: .gitignore  PROJECT_CONTEXT.md  README.md  debug_pv_table.html  pyproject.toml
documents/: PROJECT_CONTEXT.md  befund.md  open-meteo_api.md  plan.md  smard_api.md  umsetzung_preisdaten_smard.md
electricity_demand_forecast/: PROJECT_CONTEXT.md  README.md
notebook/: 01_eda_energy.ipynb  01_eda_price.ipynb  02_eda_weather.ipynb  02_energy_gen_locations.ipynb  02_generation_locations.ipynb  03_eda_energy_weather.ipynb  03_fetch_aggregate_weather.ipynb  04_base_models_eval.ipynb  04_train_pv_gen_model.ipynb  05_feature_importances.ipynb  05_train_wind_gen_model.ipynb  06_predict_price.ipynb  06_scrape_smard.ipynb  06_train_evaluate_price_mode.ipynb  07_complete_ml_pipeline.ipynb  07_predict_price.ipynb  08_interactive_prediction.ipynb  09_asymmetric_loss.ipynb  10_demand_etl_pipeline.ipynb  10_ml_pipeline_etl.ipynb  11_demand_interactive_prediction.ipynb  11_interactive_prediction_etl.ipynb
presentation/: .~lock.Stromverbrauch_Vorhersagen_v2.odp#  Stromverbrauch_Vorhersagen.odp  Stromverbrauch_Vorhersagen_v1.odp  Stromverbrauch_Vorhersagen_v2.odp
reports/: solar_clusters_capacity_map.html  solar_clusters_map.html  solar_plants_map.html  wind_clusters_capacity_map.html  wind_clusters_map.html  wind_offshore_clusters_capacity_map.html  wind_onshore_clusters_capacity_map.html  wind_plants_map.html
src/: config.py  etl.py  etl_demand.py  etl_price.py  fetch_prepare_data.py  fetch_prepare_data_price.py  fetch_price_data.py  streamlit_app.py  streamlit_app_demand.py  (+4 more)
(+16 files in other folders)
